[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhctsa"
version = "0.0.1"
description = "project_description"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Joshua B. Moore"}
]
dependencies = [
    "numpy",
    "scipy"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov",
    "pytest-mock"
]

[project.urls]
Homepage = "https://github.com/author_name/project_urlname/"
Repository = "https://github.com/author_name/project_urlname/"

[tool.setuptools.packages.find]
exclude = ["tests*", ".github*"]

